--- a/.github/workflows/day4-scm-common.yml
+++ b/.github/workflows/day4-scm-common.yml
@@ -79,11 +79,12 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy to dev environment
-        uses: azure/arm-deploy@v1
-        with:
-          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
-          template: ./${{ env.BICEP_FILE_NAME }}
-          parameters: env=${{ env.ENV_NAME }}
+        run: >
+          az deployment group create 
+          -n common 
+          -g ${{ steps.createResourceGroupName.outputs.name }}
+          --template-file ./${{ env.BICEP_FILE_NAME }}
+          --parameters env=${{ env.ENV_NAME }}
 
   deploy-to-test:
     if: (github.repository == 'azdc-training/trainingdays') && ((github.event_name == 'push') || (github.event_name == 'workflow_dispatch'))
@@ -120,8 +121,9 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy to test environment
-        uses: azure/arm-deploy@v1
-        with:
-          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
-          template: ./${{ env.BICEP_FILE_NAME }}
-          parameters: env=${{ env.ENV_NAME }}
+        run: >
+          az deployment group create 
+          -n common 
+          -g ${{ steps.createResourceGroupName.outputs.name }}
+          --template-file ./${{ env.BICEP_FILE_NAME }}
+          --parameters env=${{ env.ENV_NAME }}
