--- a/.github/workflows/day4-scm-frontend.yml
+++ b/.github/workflows/day4-scm-frontend.yml
@@ -119,13 +119,13 @@ jobs:
           -l ${{ env.RESOURCE_GROUP_LOCATION }}
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
-      - name: Deploy infrastructure to dev environment
-        uses: azure/arm-deploy@v1
-        id: infrastructure
-        with:
-          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
-          template: ./${{ env.BICEP_FILE_NAME }}
-          parameters: env=${{ env.ENV_NAME }}
+      - name: Deploy to dev environment
+        run: >
+          az deployment group create 
+          -n common 
+          -g ${{ steps.createResourceGroupName.outputs.name }}
+          --template-file ./${{ env.BICEP_FILE_NAME }}
+          --parameters env=${{ env.ENV_NAME }}
 
       - name: Download SCM Frontend artifacts
         uses: actions/download-artifact@v2
@@ -195,13 +195,13 @@ jobs:
           -l ${{ env.RESOURCE_GROUP_LOCATION }}
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
-      - name: Deploy infrastructure to test environment
-        uses: azure/arm-deploy@v1
-        id: infrastructure
-        with:
-          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
-          template: ./${{ env.BICEP_FILE_NAME }}
-          parameters: env=${{ env.ENV_NAME }}
+      - name: Deploy to test environment
+        run: >
+          az deployment group create 
+          -n common 
+          -g ${{ steps.createResourceGroupName.outputs.name }}
+          --template-file ./${{ env.BICEP_FILE_NAME }}
+          --parameters env=${{ env.ENV_NAME }}
 
       - name: Download SCM Frontend artifacts
         uses: actions/download-artifact@v2
