--- a/.github/workflows/day4-scm-visitreports.yml
+++ b/.github/workflows/day4-scm-visitreports.yml
@@ -175,13 +175,13 @@ jobs:
           -l ${{ env.RESOURCE_GROUP_LOCATION }}
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
-      - name: Deploy infrastructure to dev environment
-        uses: azure/arm-deploy@v1
-        id: infrastructure
-        with:
-          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
-          template: ./${{ env.BICEP_FILE_NAME }}
-          parameters: env=${{ env.ENV_NAME }}
+      - name: Deploy to dev environment
+        run: >
+          az deployment group create 
+          -n visitreports
+          -g ${{ steps.createResourceGroupName.outputs.name }}
+          --template-file ./${{ env.BICEP_FILE_NAME }}
+          --parameters env=${{ env.ENV_NAME }}
 
   deploy-visitreportapi-to-dev:
     runs-on: ubuntu-latest
@@ -263,13 +263,13 @@ jobs:
           -l ${{ env.RESOURCE_GROUP_LOCATION }}
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
-      - name: Deploy infrastructure to test environment
-        uses: azure/arm-deploy@v1
-        id: infrastructure
-        with:
-          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
-          template: ./${{ env.BICEP_FILE_NAME }}
-          parameters: env=${{ env.ENV_NAME }}
+      - name: Deploy to test environment
+        run: >
+          az deployment group create 
+          -n visitreports
+          -g ${{ steps.createResourceGroupName.outputs.name }}
+          --template-file ./${{ env.BICEP_FILE_NAME }}
+          --parameters env=${{ env.ENV_NAME }}
 
   deploy-visitreportapi-to-test:
     runs-on: ubuntu-latest
