fix arm action version

--- a/.github/workflows/day4-scm-contactsapi.yml
+++ b/.github/workflows/day4-scm-contactsapi.yml
@@ -125,6 +125,7 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy to dev environment
+        id: infrastructure
         run: >
           az deployment group create 
           -n contacts
@@ -173,6 +174,7 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy to test environment
+        id: infrastructure
         run: >
           az deployment group create 
           -n contacts 
