--- a/.github/workflows/day4-scm-common.yml
+++ b/.github/workflows/day4-scm-common.yml
@@ -79,12 +79,12 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy to dev environment
-        run: >
-          az deployment group create 
-          -n common 
-          -g ${{ steps.createResourceGroupName.outputs.name }}
-          --template-file ./${{ env.BICEP_FILE_NAME }}
-          --parameters env=${{ env.ENV_NAME }}
+        uses: azure/arm-deploy@v1
+        with:
+          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
+          template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
+          parameters: env=${{ env.ENV_NAME }}
 
   deploy-to-test:
     if: (github.repository == 'azdc-training/trainingdays') && ((github.event_name == 'push') || (github.event_name == 'workflow_dispatch'))
@@ -121,9 +121,9 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy to test environment
-        run: >
-          az deployment group create 
-          -n common 
-          -g ${{ steps.createResourceGroupName.outputs.name }}
-          --template-file ./${{ env.BICEP_FILE_NAME }}
-          --parameters env=${{ env.ENV_NAME }}
+        uses: azure/arm-deploy@v1
+        with:
+          resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
+          template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
+          parameters: env=${{ env.ENV_NAME }}
