--- a/.github/workflows/day4-scm-contactsapi.yml
+++ b/.github/workflows/day4-scm-contactsapi.yml
@@ -125,11 +125,12 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy infrastructure to dev environment
-        uses: azure/arm-deploy@v1.0.5
+        uses: azure/arm-deploy@v1
         id: infrastructure
         with:
           resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
           template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
           parameters: >
             env=${{ env.ENV_NAME }} 
             sqlUserPwd=${{ secrets.SQL_PASSWORD }}
@@ -175,11 +176,12 @@ jobs:
           -n ${{ steps.createResourceGroupName.outputs.name }}
 
       - name: Deploy infrastructure to test environment
-        uses: azure/arm-deploy@v1.0.5
+        uses: azure/arm-deploy@v1
         id: infrastructure
         with:
           resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
           template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
           parameters: >
             env=${{ env.ENV_NAME }} 
             sqlUserPwd=${{ secrets.SQL_PASSWORD }}
