--- a/.github/workflows/day4-scm-frontend.yml
+++ b/.github/workflows/day4-scm-frontend.yml
@@ -125,6 +125,7 @@ jobs:
         with:
           resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
           template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
           parameters: env=${{ env.ENV_NAME }}
 
       - name: Download SCM Frontend artifacts
@@ -201,6 +202,7 @@ jobs:
         with:
           resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
           template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
           parameters: env=${{ env.ENV_NAME }}
 
       - name: Download SCM Frontend artifacts
