--- a/.github/workflows/day4-scm-visitreports.yml
+++ b/.github/workflows/day4-scm-visitreports.yml
@@ -181,6 +181,7 @@ jobs:
         with:
           resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
           template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
           parameters: env=${{ env.ENV_NAME }}
 
   deploy-visitreportapi-to-dev:
@@ -269,6 +270,7 @@ jobs:
         with:
           resourceGroupName: ${{ steps.createResourceGroupName.outputs.name }}
           template: ./${{ env.BICEP_FILE_NAME }}
+          failOnStdErr: false
           parameters: env=${{ env.ENV_NAME }}
 
   deploy-visitreportapi-to-test:
